--- a/src/components/CardPrice.css
+++ b/src/components/CardPrice.css
@@ -1,6 +1,6 @@
 
 .card-container {
-    width: 50%;
+    width: 100%;
     min-width: 200px;
     border: 2px solid white;
     background-color: white;
@@ -30,8 +30,40 @@
     transition: all 0.5s ease;
 }
 
+.btn-spacing {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+.light {
+    box-shadow: 1px 1px 4px 4px rgb(217, 236, 246);
+    background-color: white;
+    color: black;
+}
+
+.dark {
+    background-color: black;
+    color: white;
+}
+
+.btn-price {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border-radius: 30px;
+    padding: 0 2rem;
+    font-size: 2rem;
+    text-decoration: none;
+}
+
 .point:nth-child(even) {
     background-color: rgb(247, 254, 255);
+}
+
+.btn-price:hover {
+    background-color: white;
+    color: black;
+    border: 2px solid black;
 }
 
 .card-heading:hover {
@@ -54,6 +86,10 @@
 
     .card-container {
         width: 80%;
+    }
+
+    .btn-price {
+        padding: 0 0.5rem;
     }
     
 }
