--- a/src/components/IntroPage.css
+++ b/src/components/IntroPage.css
@@ -40,6 +40,24 @@ video {
     margin: 6px
 }
 
+.btn-background {
+    position: absolute;
+    top: 100px;
+    right: 40px;
+    background-color: black;
+    color: white;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 100%;
+    border: 2px solid white;
+}
+
+.btn-background:hover {
+    background-color: white;
+    color: black;
+    cursor: pointer;
+}
+
 @media screen and (max-width: 960px) {
     .intro-container h1 {
         font-size: 4rem;
