--- a/src/components/IntroPage.css
+++ b/src/components/IntroPage.css
@@ -44,7 +44,7 @@ video {
     position: absolute;
     top: 100px;
     right: 40px;
-    background-color: black;
+    background-color: transparent;
     color: white;
     width: 2rem;
     height: 2rem;
@@ -62,6 +62,11 @@ video {
     .intro-container h1 {
         font-size: 4rem;
         margin-top: -150px;
+    }
+
+    .btn-background {
+        top: 100px;
+        right: 20px
     }
 }
 
