--- a/src/components/InfoBox.css
+++ b/src/components/InfoBox.css
@@ -59,5 +59,19 @@ img:hover {
     padding: 1rem;
 }
 
+@media screen and (max-width: 1024px) {
+    .info-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .pic {
+        display: none;
+    }
+
+    .info {
+        width: 100%;
+    }
+}
 
 
