--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -132,3 +132,10 @@
       width: 100%;
     }
   }
+
+  @media screen and (max-width: 500px) {
+    
+    .cards {
+      padding: 2rem;
+    }
+  }
