--- a/src/components/explore-page-contianer/CardArea.css
+++ b/src/components/explore-page-contianer/CardArea.css
@@ -1,3 +1,10 @@
+/* video {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -1;
+} */
 
 .explore_div
 {
@@ -6,7 +13,11 @@
 
 .explore_intro
 {
-    padding: 22rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 30vh;
     background: url('https://wallpapers.com/images/hd/lionhead-goldfish-7f0rda14z8xc3j3m.jpg') center center/cover no-repeat;
 }
 
@@ -23,3 +34,36 @@
     flex-wrap: wrap;
     
 } 
+
+.searchInputs {
+    /* margin-top: 105px; */
+    display: flex;
+  }
+  
+  .search input {
+    background-color: white;
+    border: 0;
+    border-radius: 2px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    font-size: 18px;
+    padding: 15px;
+    height: 60px;
+    width: 100%;
+  }
+  
+  .searchIcon {
+    height: 60px;
+    width: 50px;
+    background-color: white;
+    display: grid;
+    place-items: center;
+    cursor: pointer;
+  }
+  
+  input:focus {
+    outline: none;
+  }
+  .searchIcon svg {
+    font-size: 35px;
+  }
