--- a/src/components/home-page-components/Button.css
+++ b/src/components/home-page-components/Button.css
@@ -33,11 +33,29 @@
     padding: 12px 26px;
     font-size: 20px;
   }
+
+  .btn--primary:hover
+  {
+    background-color: black;
+    color: white;
+  }
   
   .btn--large:hover,
   .btn--medium:hover {
     transition: all 0.3s ease-out;
-    background: #fff;
-    color: #242424;
+    background: black;
+    color: white;
+    border-color: black;
     transition: 250ms;
+  }
+  
+  .btn--test {
+    background-color: black;
+    color: white;
+    border: 1px solid var(--primary);
+  }
+  .btn--test:hover {
+    background-color: var(--primary);
+    color: #242424;
+    border: 1px solid var(--primary);
   }
