--- a/src/components/home-page-components/InfoBox.css
+++ b/src/components/home-page-components/InfoBox.css
@@ -35,6 +35,9 @@ img:hover {
 .info {
     padding: 2rem;
     background-color: white;
+    box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
+    -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
+    filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
     opacity: 0.7;
     width: 50%;
     display: flex;
@@ -69,7 +72,7 @@ img:hover {
     .info {
         width: 60%;
         background-color: white;
-        opacity: 0.7;
+        opacity: 0.9;
     }
 }
 
