--- a/src/components/home-page-components/IntroPage.css
+++ b/src/components/home-page-components/IntroPage.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 video {
     object-fit: cover;
     width: 100%;
@@ -56,6 +60,33 @@ video {
     background-color: white;
     color: black;
     cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.IntroButton {
+    cursor: pointer;
+    background-color: transparent;
+    color: #fff;
+    padding: 8px 20px;
+    border: 1px solid var(--primary);
+    transition: all 0.3s ease-out;
+    padding: 12px 26px;
+    font-size: 20px;
+}
+
+.IntroButton:hover {
+        transition: all 0.3s ease-out;
+        background: black;
+        transition: 250ms;
+}
+
+.IntroButton:hover a {
+    transition: all 0.3s ease-out;
+    color: white;
 }
 
 @media screen and (max-width: 960px) {
