--- a/src/components/home-page-components/IntroPage.css
+++ b/src/components/home-page-components/IntroPage.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 video {
     object-fit: cover;
     width: 100%;
@@ -58,6 +62,34 @@ video {
     cursor: pointer;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.IntroButton {
+    cursor: pointer;
+    background-color: transparent;
+    color: #fff;
+    padding: 8px 26x;
+    border: 1px solid var(--primary);
+    transition: all 0.3s ease-out;
+    padding: 12px 26px;
+    font-size: 20px;
+    margin: 6px;
+}
+
+.IntroButton:hover {
+        transition: all 0.3s ease-out;
+        background: black;
+        transition: 250ms;
+}
+
+.IntroButton:hover a {
+    transition: all 0.3s ease-out;
+    color: white;
+}
+
 @media screen and (max-width: 960px) {
     .intro-container h1 {
         font-size: 4rem;
@@ -67,6 +99,12 @@ video {
     .btn-background {
         top: 100px;
         right: 20px
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .IntroButton {
+        width: 100%;
     }
 }
 
