--- a/src/components/home-page-components/InfoBox.css
+++ b/src/components/home-page-components/InfoBox.css
@@ -41,6 +41,9 @@ img:hover {
     flex-direction: column;
     align-items: center;
     border-radius: 30px;
+    box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
+    -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
+    filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
 }
 
 .info h2 {
@@ -69,7 +72,7 @@ img:hover {
     .info {
         width: 60%;
         background-color: white;
-        opacity: 0.7;
+        opacity: 0.95;
     }
 }
 
