--- a/src/components/test-page-components/style.css
+++ b/src/components/test-page-components/style.css
@@ -10,12 +10,23 @@
     
 }
 .startbut{
-    padding: 0.75rem; 
+    padding: 1rem 2rem; 
     font-size: 3rem;
     line-height: 1; 
-    border-radius: 0.25rem; 
+    border-radius: 10px; 
     border-width: 1px; 
     cursor: pointer;
+    color: white;
+    background-color: green;
+    transition: all 0.3s ease-in-out;
+    border: none;
+}
+
+.startbut:hover {
+    color: black;
+    background-color: white;
+    transition: all 0.3s ease-in-out;
+    border: none;
 }
 
 /* Quizjs file  */
@@ -34,6 +45,7 @@
     border-width: 1px; 
     box-shadow: 0 10px 15px 5px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); 
     width: 80%;
+    background-color: white;
 }
 .quesbox{
     padding: 0.75rem; 
@@ -102,9 +114,8 @@
 .maindiv{
     display: flex; 
     justify-content: center; 
-    align-items: center; 
     width: 100%; 
-    height: 100vh; 
+    padding: 3rem 2rem;
 }
 
 .hugebox{
@@ -112,45 +123,55 @@
     text-align: center; 
     border-radius: 0.375rem; 
     border-width: 1px; 
-    width: 40%;
-    height: 70%;
-    box-shadow: 0px 1px 13px 5px #000000;
+    width: 80%;
+    padding: 1rem;
+    /* height: 70%; */
+    box-shadow: 0px 1px 13px 5px #e3e1e1;
     /* box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);  */
 }
 
-.oneh{
-    padding: 0.5rem;
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-    color: #000000; 
-    font-size: 1.80rem;
-    font-weight: 600;
-    line-height: 2rem; 
-    background-color: #bbe4e9;
-    margin-inline: 1%;
-    border-radius: 2%;
-    /* box-shadow: 0px 1px 13px 5px #000000; */
+.oneh {
+    padding: 1rem;
+    font-size: 2rem;
 }
 
-.twoh{
-    padding: 0.75rem; 
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem; 
-    color: #000000; 
-    font-size: 1.5rem;
-    line-height: 2rem; 
-    border-radius: 5%;
-    background-color: #cbf078;
-    margin-inline: 20%;
+.career_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.career_container div {
+    font-weight: 700;
+    text-align: center;
+    padding: 1rem 2rem;
+    min-width: 200px;
+    max-width: 20%;
+    width: 20%;
+    border: solid 1px rgb(215, 215, 215);
+    box-shadow: 0px 2px rgb(192, 192, 192);
+    margin: 0.5rem;
 }
 
 .startag{
     padding: 1.25rem; 
     font-size: 1.5rem;
-    line-height: 2rem; 
-    border-width: 1px; 
-    border-color: orange;
+    line-height: 2rem;
+    color: white;
+    background-color: black;
     border-radius: 5%;
     cursor: pointer;
-    margin-top: 3rem;
+    margin-top: 2rem;
+    margin-bottom: 0.5rem;
+    border: none;
+    transition: all 0.3s ease-in-out;
+}
+
+.startag:hover {
+    color: white;
+    background-color: green;
+    transition: all 0.3s ease-in-out;
+    border: none;
 }
