--- a/src/components/shared-components/Footer.css
+++ b/src/components/shared-components/Footer.css
@@ -49,21 +49,47 @@
     width: 100%;
     max-width: 1000px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    border: solid 1px rgba(255, 255, 255, 0.483);
+    padding: 1rem 0.5rem 0.5rem 0.5rem;
+  }
+
+  .footer-links h2 {
+    text-align: center;
+    color: white;
   }
   
   .footer-link-wrapper {
+    width: 100%;
     display: flex;
+    justify-content: center;
   }
   
   .footer-link-items {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: row;
+    justify-content: space-between;
     margin: 16px;
     text-align: left;
     width: 160px;
     box-sizing: border-box;
+    font-size: 20px;
+    width: 70%;
+  }
+
+  .footer-link-items .options {
+    color: white;
+    padding: 0 0.5rem;
+    text-decoration: underline;
+    text-decoration-color: aqua;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .footer-link-items .options:hover {
+    color: aqua;
+    transform: scale(1.2);
+    transition: all 0.3s ease-in-out;
   }
   
   .footer-link-items h2 {
@@ -92,13 +118,20 @@
   .footer-input::placeholder {
     color: #b1b1b1;
   }
-  
+
   /* Social Icons */
   .social-icon-link {
-    color: #fff;
+    color: aqua;
     font-size: 24px;
+    transition: all 0.3s ease-in-out;
   }
   
+  .social-icon-link:hover {
+    color: white;
+    transform: scale(1.3);
+    transition: all 0.3s ease-in-out;
+  }
+
   .social-media {
     max-width: 1000px;
     width: 100%;
@@ -121,7 +154,7 @@
   }
   
   .social-logo {
-    color: #fff;
+    color: aqua;
     justify-self: start;
     margin-left: 20px;
     cursor: pointer;
@@ -130,6 +163,13 @@
     display: flex;
     align-items: center;
     margin-bottom: 16px;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .social-logo:hover {
+    color: white;
+    transform: scale(1.3);
+    transition: all 0.3s ease-in-out;
   }
   
   .website-rights {
@@ -150,8 +190,10 @@
       width: 100%;
     }
   
-    .footer-link-wrapper {
+    .footer-link-items {
       flex-direction: column;
+      align-items: center;
+      gap: 0.5rem;
     }
   
     .social-media-wrap {
